[package]
name = "sqlite-vfs-http"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license-file = "LICENSE"
keywords = ["sqlite", "vfs", "http"]
description = "Query sqlite database over http"
repository = "https://github.com/darkskygit/sqlite-vfs-http"
readme = "README.md"

[dependencies]
rand = "0.8"
reqwest = "0.12"
sqlite-vfs = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0"
rocket = "0.5"
rocket_seek_stream = "0.2"
rusqlite = "0.32"
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
